# wallet

./: .flake8  .gitignore  .pre-commit-config.yaml
backend/: .gitignore  Makefile  UserStories.md  pyproject.toml  test.rest
backend/local/: settings.local.py
backend/project/api/: urls.py
backend/project/project/: asgi.py  urls.py
backend/project/project/settings/: __init__.py  database.py  rest.py  settings.py  static.py
backend/project/user/: apps.py  serializers.py  urls.py  views.py
backend/project/wallet/: apps.py  models.py  serializers.py  urls.py  views.py
backend/project/wallet/migrations/: 0001_initial.py  0002_account_currency_alter_account_balance.py  0003_alter_account_balance.py  0004_alter_account_created_at.py  0005_alter_account_name.py
frontend/: package-lock.json  package.json  requirements.md  test.rest
frontend/src/app/: App.tsx
frontend/src/app/styles/: colors.css  global.css  reset.css  utils.css
frontend/src/pages/Home/: Home.tsx  index.ts
frontend/src/pages/Home/api/: index.ts
frontend/src/pages/Home/ts/: interfaces.ts
frontend/src/pages/Home/ui/: NavBar.tsx  index.ts
frontend/src/pages/Login/: Login.tsx  index.ts
frontend/src/pages/Logout/: Logout.tsx  index.ts
frontend/src/pages/landing/: index.ts  landing.tsx
frontend/src/pages/register/: Register.tsx  index.ts
frontend/src/shared/api/: base.ts  index.ts
frontend/src/shared/contants/: index.ts
frontend/src/shared/ui/: NavBar.tsx
frontend/src/shared/utils/: localStorage.ts
frontend/src/widgets/Header/: Header.tsx  index.ts
(+11 files in other folders)
