[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["IamIsthill <159409061+IamIsthill@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-split-settings = "^1.3.2"
djangorestframework = "^3.15.2"
django-environ = "^0.11.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
